--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-scripts-web-component",
-  "version": "2.0.2-alpha",
+  "version": "2.0.3-alpha",
   "description": "Configuration and scripts for Create React Web Component.",
   "repository": "LukasBombach/create-react-web-component",
   "license": "BSD-3-Clause",
@@ -50,6 +50,7 @@
     "promise": "8.0.1",
     "react-dev-utils": "^3.0.2",
     "react-error-overlay": "^1.0.9",
+    "react-web-component": "^1.0.1-alpha",
     "react-web-component-style-loader": "^0.1.2-alpha",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.5.9",
@@ -60,8 +61,7 @@
   },
   "devDependencies": {
     "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-web-component": "^1.0.1-alpha"
+    "react-dom": "^15.5.4"
   },
   "optionalDependencies": {
     "fsevents": "1.1.2"
