--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,15 @@
+# System
+.DS_Store
+
+# IDEs
 .idea/
 .vscode/
+
+# Development
 node_modules/
-.DS_Store
+packages/test-app
+
+# Logs
 lerna-debug.log
 npm-debug.log*
 yarn-debug.log*
